fix align self description video

--- a/src/Pages/Works/Videos/style.css
+++ b/src/Pages/Works/Videos/style.css
@@ -109,6 +109,7 @@
             font-size: .8rem;
             margin-bottom: 1rem;
             margin-top: 1rem;
+            align-self: center;
         }
         .bloco >h2 {
             text-align: center;
@@ -169,6 +170,8 @@
             font-size: .8rem;
             margin-bottom: 1rem;
             margin-top: 1rem;
+            align-self: center;
+
         }
         .bloco >h2 {
             text-align: center;
